--- a/local.properties
+++ b/local.properties
@@ -2,6 +2,8 @@
 # as it contains information specific to your local configuration.
 #
 # Location of the SDK. This is only used by Gradle.
-#
-#Sat Dec 17 18:02:37 CST 2016
-sdk.dir=S\:\\AndroidSDK
+# For customization when using a Version Control System, please read the
+# header note.
+#Fri May 04 17:20:49 CST 2018
+ndk.dir=/Users/yeshen/Library/Android/sdk/ndk-bundle
+sdk.dir=/Users/yeshen/Library/Android/sdk
